downloadable button font 16px, fix downloadBy section image size, mobile view gifs in resources is not centered (fixed), different downloadable grid configurations possible

--- a/components/topic/TopicDownloadables/TopicDownloadables.scss
+++ b/components/topic/TopicDownloadables/TopicDownloadables.scss
@@ -6,6 +6,11 @@
     p {
         font-size: 18px;
     }
+    .resource-card {
+        p {
+            font-size: 16px;
+        }
+    }
 
     .btn {
         font-size: 19px;
