--- a/styles/resources.scss
+++ b/styles/resources.scss
@@ -122,7 +122,7 @@
 
         .resource-card {
             p {
-                font-size: 18px;
+                font-size: 16px;
             }
         }
 
@@ -153,14 +153,16 @@
                 height: 321px;
                 width: 100%;
                 color: $secondary-5;
+                aspect-ratio: 547 / 307;
+                height: auto;
 
                 @include media-breakpoint-down(xl) {
                     margin-top: 0rem;
-                    height: 373px;
+                    aspect-ratio: 720 / 373;
                 }
 
                 @include media-breakpoint-down(md) {
-                    height: 183px;
+                    aspect-ratio: 327 / 183;
                 }
             }
 
@@ -219,6 +221,7 @@
 
         .image-content-flex {
             max-width: 100%;
+            margin: 0 auto;
             
             @include media-breakpoint-up(xl) {
                 width: 432px;
@@ -237,12 +240,13 @@
 
             @include media-breakpoint-down(md) {
                 width: 100%;
-                margin: 0 auto;
                 text-align: center;
             }
 
             .content-image {
                 margin-bottom: 1rem;
+                margin-left: auto;
+                margin-right: auto;
 
                 @include media-breakpoint-up(xl) {
                     height: 244px;
@@ -261,7 +265,7 @@
                     height: 183px;
                     width: 100%;
                     max-width: 327px;
-                    margin-right: 0;
+                    margin-right: auto;
                     margin-bottom: 1rem;
                 }
             }
